# ArchTimePro

./: .gitignore  CNAME  Lista studi.csv  _headers  admin.html  app.html  calcolo-margine-commessa.html  controllo-margini-studi-tecnici.html  feedback - Copia.html  feedback.html  gestionale-studio-architettura.html  gestione-commesse-progettazione.html  guida - Copia.html  guida.html  index - Copia.html  index.html  manifest.webmanifest  metodo.html  offline.html  ore-budget-commessa.html  privacy - Copia.html  privacy.html  rendicontazione-commesse-timesheet.html  robots.txt  sicurezza.html  sitemap.xml  software-gestione-commesse.html  sw.js  termini.html  timer-desktop.html  timer.html  tutorial.html
assets/: app-pro.css  app.css  app.js  public-site.css
desktop-timer/: README.md  main.js  package-lock.json  package.json  preload.js
desktop-timer-tauri/: .gitignore  README.md  package-lock.json  package.json
desktop-timer-tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop-timer-tauri/src-tauri/src/: lib.rs  main.rs
docs/: automazione-invio-email-studi.md  batch-pilota-10-studi-architettura-2026-05.csv  beta-feedback-kit.md  beta-feedback-log.md  beta-launch-checklist.md  deploy-statico.md  fase-1.md  fase-2.md  fase-3.md  lista-facilitatori-linkedin.md  micro-facilitatori-linkedin.md  nuova-lista-studi-architettura-2026-05-arricchita.csv  nuova-lista-studi-architettura-2026-05.csv  outreach-studi-architettura.md  pre-dominio-audit.md  privacy-economica-avanzata.md  produzione-dominio-email-stripe.md  qa-beta.md  qa-desktop-timer-compact.js  (+6 more)
(+75 files in other folders)
