[package]
name = "arch-time-mini-timer-light"
version = "0.2.0"
description = "Arch Time Pro desktop timer"
authors = ["Arch Time Pro"]
edition = "2021"

[lib]
name = "arch_time_mini_timer_light_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
